# kdtree-rs

./: Cargo.toml  PLAN.md  README.md  pyproject.toml
.github/workflows/: release.yaml
python/kdtree/: __init__.py  _core.pyi
scripts/: benchmark.py
src/: data.rs  error.rs  lib.rs  metric.rs  node.rs  pairs.rs  query.rs  radius.rs  tree.rs
tests/: test_api.py  test_correctness.py
